syntax = "proto2";

package stremio.core.types;

option java_package = "com.stremio.core.types.resource";

import "google/protobuf/timestamp.proto";
import "stremio/core/types/stream.proto";

message Video {
  required string id = 1;
  required string title = 2;
  optional google.protobuf.Timestamp released = 3;
  optional string overview = 4;
  optional string thumbnail = 5;
  repeated Stream streams = 6;
  optional SeriesInfo seriesInfo = 7;
  // TODO: Add trailer streams
  repeated Stream trailer_streams = 8;
  required bool upcoming = 9;
  required bool watched = 10;
  required bool current_video = 11;

  message SeriesInfo {
    required int64 season = 1;
    required int64 episode = 2;
  }
}